--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
 steps:
 
 - script: |
-    wget -O- https://git.io/shellspec | sh
+    curl -fsSL https://git.io/shellspec | sh -s -- --yes
   displayName: 'Install Shellspec'
 
 - script: echo "Deploy"
